--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "eslint-plugin-react-hooks": "^4.2.0",
     "graphql": "^15.3.0",
     "graphql-tag": "^2.11.0",
+    "jwt-decode": "^3.0.0",
     "react": "^17.0.0",
     "react-dom": "^17.0.0",
     "react-router-dom": "^5.2.0",
