--- a/server/package.json
+++ b/server/package.json
@@ -21,6 +21,7 @@
   },
   "devDependencies": {
     "eslint-config-airbnb-base": "^14.2.0",
+    "eslint-config-prettier": "^6.14.0",
     "eslint-plugin-import": "^2.22.1",
     "nodemon": "^2.0.6"
   }
