--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,6 +4,7 @@ jobs:
     docker:
       - image: 'cimg/node:14.14.0'
     steps:
+      - checkout
       - run: cd client && npm i
       - run: cd client && npm run build
 workflows:
